fix: [CDS-38814]: fixed search icon alignment and no data image (#9411)
* fix: [CDS-38814]: fixed search icon alignment and no data image

* fix: [CDS-38814]: updated snapshots

* fix: [CDS-38814]: code fix

--- a/src/modules/75-cd/components/ServiceDetails/PipelineExecutions/PipelineExecutions.module.scss
+++ b/src/modules/75-cd/components/ServiceDetails/PipelineExecutions/PipelineExecutions.module.scss
@@ -16,11 +16,18 @@
     width: 100%;
     height: 100%;
     .dataCard {
+      margin-top: var(--spacing-10);
       height: 100%;
     }
     .pipelineExecutionsEmptyStateImage {
       width: 150px;
       height: 100px;
     }
+  }
+}
+
+.searchIconStyle {
+  & > input:focus {
+    width: 200px !important;
   }
 }
